Changed margin on tweet icon's to avoid improper alignment of text and icons

--- a/public/styles/posted-tweets.css
+++ b/public/styles/posted-tweets.css
@@ -65,7 +65,7 @@ footer.tweet-footer {
 }
 
 article.posted-tweets span {
-    margin: 0px 0px 0px 245px;
+    margin: 0px 0px 0px 225px;
     border-color: #A9A9A9;
 }
 article.posted-tweets:hover {
